--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vuepic/vue-datepicker": "^8.0.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue3-colorpicker": "^2.2.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
